<resources>
    <string name="app_name">TravelBuddy</string>
    <string name="title_activity_maps">Travel Buddy</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_clear_route">Clear Route</string>
    <string name="menu_history">History</string>
    <string name="menu_add_detour">Add Destination</string>
    <string name="menu_home">Home</string>
    <string name="user_welcome">Welcome</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
